Tutorial-ETK_thorn-NRPyPlusTOVID: free the mallocs!

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -116,24 +116,24 @@
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
     "rfm.reference_metric()\n",
     "\n",
-    "import TOV.Polytropic_EOSs as poly\n",
-    "# Set up the EOS parameters\n",
-    "eos = poly.set_up_EOS_parameters__Read_et_al_input_variables('APR4')\n",
+    "# import TOV.Polytropic_EOSs as poly\n",
+    "# # Set up the EOS parameters\n",
+    "# eos = poly.set_up_EOS_parameters__Read_et_al_input_variables('APR4')\n",
     "\n",
     "\n",
-    "# Import our TOV solver, which supports both single\n",
-    "# and piecewise polytropic EOSs\n",
-    "import TOV.TOV_Solver as TOV\n",
+    "# # Import our TOV solver, which supports both single\n",
+    "# # and piecewise polytropic EOSs\n",
+    "# import TOV.TOV_Solver as TOV\n",
     "\n",
-    "# Set up the initial condition for the pressure by\n",
-    "# selecting a central baryon density\n",
-    "rhob_central = 2.0\n",
+    "# # Set up the initial condition for the pressure by\n",
+    "# # selecting a central baryon density\n",
+    "# rhob_central = 2.0\n",
     "\n",
-    "# Solve the TOV equations given our EOS and central density\n",
-    "import time\n",
-    "start = time.time()\n",
-    "TOV.TOV_Solver(eos,rho_baryon_central=rhob_central,verbose=True)\n",
-    "print(\"TOV solution generated in: \"+str(time.time()-start)+\" s\")"
+    "# # Solve the TOV equations given our EOS and central density\n",
+    "# import time\n",
+    "# start = time.time()\n",
+    "# TOV.TOV_Solver(eos,rho_baryon_central=rhob_central,verbose=True)\n",
+    "# print(\"TOV solution generated in: \"+str(time.time()-start)+\" s\")"
    ]
   },
   {
@@ -565,7 +565,6 @@
     "#include <math.h>\n",
     "#include <stdio.h>\n",
     "#include <stdbool.h>\n",
-    "#include <stdlib.h> // Needed for rand()\n",
     "\n",
     "#include \"cctk.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
@@ -593,7 +592,7 @@
     "#define vely (&vel[1*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "#define velz (&vel[2*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "\n",
-    "void read_TOV_input_data_from_file(ID_inputs TOV_in) {\n",
+    "void read_TOV_input_data_from_file(ID_inputs *TOV_in) {\n",
     "\n",
     "    DECLARE_CCTK_PARAMETERS;\n",
     "   \n",
@@ -604,7 +603,7 @@
     "    sprintf(filename,\"%s\",TOV_filename); // TOV_filename is a CCTK_PARAMETER\n",
     "    FILE *in1Dpolytrope = fopen(filename, \"r\");\n",
     "    if (in1Dpolytrope == NULL) {\n",
-    "        fprintf(stderr,\"ERROR: could not open file %s\\\\n\",filename);\n",
+    "        fprintf(stderr,\"ERROR: could not open file %s\\n\",filename);\n",
     "        exit(1);\n",
     "    }\n",
     "    // Count the number of lines in the data file:\n",
@@ -622,7 +621,7 @@
     "    // Read from the data file, filling in arrays.\n",
     "    // read_datafile__set_arrays() may be found in TOV/tov_interp.h\n",
     "    if(read_datafile__set_arrays(in1Dpolytrope, r_Schw_arr,rho_arr,rho_baryon_arr,P_arr,M_arr,expnu_arr,exp4phi_arr,rbar_arr) == 1) {\n",
-    "        fprintf(stderr,\"ERROR WHEN READING FILE %s!\\\\n\",filename);\n",
+    "        fprintf(stderr,\"ERROR WHEN READING FILE %s!\\n\",filename);\n",
     "        exit(1);\n",
     "    }\n",
     "    fclose(in1Dpolytrope);\n",
@@ -632,25 +631,25 @@
     "        if(rho_arr[i-1]>0 && rho_arr[i]==0) { Rbar = rbar_arr[i-1]; Rbar_idx = i-1; }\n",
     "    }\n",
     "    if(Rbar<0) {\n",
-    "        fprintf(stderr,\"Error: could not find rbar=Rbar from data file.\\\\n\");\n",
+    "        fprintf(stderr,\"Error: could not find rbar=Rbar from data file.\\n\");\n",
     "        exit(1);\n",
     "    }\n",
     "   \n",
-    "    TOV_in.Rbar = Rbar;\n",
-    "    TOV_in.Rbar_idx = Rbar_idx;\n",
+    "    TOV_in->Rbar = Rbar;\n",
+    "    TOV_in->Rbar_idx = Rbar_idx;\n",
     "   \n",
     "    const int interp_stencil_size = 12;\n",
-    "    TOV_in.interp_stencil_size = interp_stencil_size;\n",
-    "    TOV_in.numlines_in_file = numlines_in_file;\n",
+    "    TOV_in->interp_stencil_size = interp_stencil_size;\n",
+    "    TOV_in->numlines_in_file = numlines_in_file;\n",
     "   \n",
-    "    TOV_in.r_Schw_arr     = r_Schw_arr;\n",
-    "    TOV_in.rho_arr        = rho_arr;\n",
-    "    TOV_in.rho_baryon_arr = rho_baryon_arr;\n",
-    "    TOV_in.P_arr          = P_arr;\n",
-    "    TOV_in.M_arr          = M_arr;\n",
-    "    TOV_in.expnu_arr      = expnu_arr;\n",
-    "    TOV_in.exp4phi_arr    = exp4phi_arr;\n",
-    "    TOV_in.rbar_arr       = rbar_arr;\n",
+    "    TOV_in->r_Schw_arr     = r_Schw_arr;\n",
+    "    TOV_in->rho_arr        = rho_arr;\n",
+    "    TOV_in->rho_baryon_arr = rho_baryon_arr;\n",
+    "    TOV_in->P_arr          = P_arr;\n",
+    "    TOV_in->M_arr          = M_arr;\n",
+    "    TOV_in->expnu_arr      = expnu_arr;\n",
+    "    TOV_in->exp4phi_arr    = exp4phi_arr;\n",
+    "    TOV_in->rbar_arr       = rbar_arr;\n",
     "    /* END TOV INPUT ROUTINE */\n",
     "}\n",
     "\n",
@@ -659,7 +658,7 @@
     "    DECLARE_CCTK_PARAMETERS;\n",
     "   \n",
     "    ID_inputs TOV_in;\n",
-    "    read_TOV_input_data_from_file(TOV_in);\n",
+    "    read_TOV_input_data_from_file(&TOV_in);\n",
     "   \n",
     "#pragma omp parallel for\n",
     "  for(CCTK_INT i2=0;i2<cctk_lsh[2];i2++) for(CCTK_INT i1=0;i1<cctk_lsh[1];i1++) for(CCTK_INT i0=0;i0<cctk_lsh[0];i0++) {\n",
@@ -686,7 +685,18 @@
     "                      gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                      kxx,kxy,kxz,kyy,kyz,kzz);\n",
     "  }\n",
-    "}\\n\"\"\")"
+    "\n",
+    "  free(TOV_in.r_Schw_arr);\n",
+    "  free(r_Schw_arr);\n",
+    "  free(rho_arr);\n",
+    "  free(rho_baryon_arr);\n",
+    "  free(P_arr);\n",
+    "  free(M_arr);\n",
+    "  free(expnu_arr);\n",
+    "  free(exp4phi_arr);\n",
+    "  free(rbar_arr);\n",
+    "}\n",
+    "\"\"\")"
    ]
   },
   {
