Tutorial-ETK_thorn-NRPyPlusTOVID: Update default central density in single polytrope case to more closely match TOVSolver parameter file

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -81,8 +81,8 @@
      "output_type": "stream",
      "text": [
       "(1256, 1256, 1256, 1256, 1256, 1256)\n",
-      "Just generated a TOV star with R_Schw = 9.566044579232513e-01 , M = 1.405030336771405e-01 , M/R_Schw = 1.468768334847266e-01 .\n",
-      "TOV solution generated in: 0.534719944 s\n"
+      "Just generated a TOV star with R_Schw = 9.566039886703138e-01 , M = 1.405031497682765e-01 , M/R_Schw = 1.468770268913230e-01 .\n",
+      "TOV solution generated in: 1.0282740593 s\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
     "    start = time.time()\n",
     "    TOV.TOV_Solver(eos,\n",
     "                   outfile=\"outputTOVpolytrope.txt\",\n",
-    "                   rho_baryon_central=0.129285,\n",
+    "                   rho_baryon_central=0.129285309,\n",
     "                   verbose = True)\n",
     "    print(\"TOV solution generated in: \"+str(time.time()-start)+\" s\")\n",
     "else:\n",
@@ -749,7 +749,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPlusTOVID//interface.ccl\n"
+      "Overwriting NRPyPlusTOVID//interface.ccl\n"
      ]
     }
    ],
@@ -775,7 +775,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPlusTOVID//param.ccl\n"
+      "Overwriting NRPyPlusTOVID//param.ccl\n"
      ]
     }
    ],
@@ -863,7 +863,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPlusTOVID//schedule.ccl\n"
+      "Overwriting NRPyPlusTOVID//schedule.ccl\n"
      ]
     }
    ],
@@ -923,7 +923,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPlusTOVID/src/make.code.defn\n"
+      "Overwriting NRPyPlusTOVID/src/make.code.defn\n"
      ]
     }
    ],
@@ -955,7 +955,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 94808 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
+      "[NbConvertApp] Writing 93697 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
