Tutorial-ETK_thorn-NRPyPlusTOVID: modified the way the tutorial handles single/polytropic EOSs so that it generates an appropriate initial data file with file name that is compatible with the NRPy+ generated IllinoisGRMHD/NRPyPlusTOVID section of the parameter file.

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# `NRPyPlusTOVID`: An Einstein Toolkit Thorn for Piecewise-Polytrope TOV neutron star initial data\n",
     "\n",
-    "## Author: Zach Etienne\n",
+    "## Author: Zach Etienne and Leo Werneck\n",
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
@@ -80,9 +80,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1256, 1256, 1256, 1256, 1256, 1256)\n",
-      "Just generated a TOV star with R_Schw = 9.566039886703138e-01 , M = 1.405031497682765e-01 , M/R_Schw = 1.468770268913230e-01 .\n",
-      "TOV solution generated in: 1.0282740593 s\n"
+      "(1211, 1211, 1211, 1211, 1211, 1211)\n",
+      "Just generated a TOV star with R_Schw = 2.721036062528257e-01 , M = 8.242702010994347e-02 , M/R_Schw = 3.029251293103268e-01 .\n",
+      "PPEOS SLy TOV solution generated in: 0.645609855652 s\n",
+      "Initial data file: outputTOVpolytrope-SLy.txt\n"
      ]
     }
    ],
@@ -116,17 +117,26 @@
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
     "rfm.reference_metric()\n",
     "\n",
-    "# ADJUST THIS PARAMETER IF DESIRED. False = APR piecewise polytrope\n",
-    "# vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv\n",
-    "generate_single_polytrope = True\n",
-    "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "# ADJUST THIS PARAMETER IF DESIRED.\n",
+    "# \"Single\" = Single Polytrope\n",
+    "# \"APR4\"   = APR4 Piecewise Polytrope\n",
+    "# \"SLY\"    = SLy  Piecewise Polytrope\n",
+    "# .---------------------------------------------.\n",
+    "# | For all available names please look in the  |\n",
+    "# | TOV/Piecewise_Polytrope__dict.py NRPy+ file |\n",
+    "# .---------------------------------------------.\n",
+    "# vvvvvvvvvvvvvvvv\n",
+    "# EOSname = \"Single\"\n",
+    "# EOSname = \"APR4\"\n",
+    "EOSname = \"SLy\"\n",
+    "# ^^^^^^^^^^^^^^^^\n",
     "\n",
     "# Import our TOV solver, which supports both single\n",
     "# and piecewise polytropic EOSs\n",
     "import TOV.TOV_Solver as TOV\n",
     "import TOV.Polytropic_EOSs as poly\n",
     "\n",
-    "if generate_single_polytrope:\n",
+    "if EOSname==\"Single\":\n",
     "    # Set neos = 1 (single polytrope)\n",
     "    neos = 1\n",
     "\n",
@@ -147,10 +157,11 @@
     "                   outfile=\"outputTOVpolytrope.txt\",\n",
     "                   rho_baryon_central=0.129285309,\n",
     "                   verbose = True)\n",
-    "    print(\"TOV solution generated in: \"+str(time.time()-start)+\" s\")\n",
+    "    print(\"Single Polytrope TOV solution generated in: \"+str(time.time()-start)+\" s\")\n",
+    "    print(\"Initial data file: outputTOVpolytrope.txt\")\n",
     "else:\n",
     "    # Set up the EOS parameters\n",
-    "    eos = poly.set_up_EOS_parameters__Read_et_al_input_variables('APR4')\n",
+    "    eos = poly.set_up_EOS_parameters__Read_et_al_input_variables(EOSname)\n",
     "\n",
     "    # Set up the initial condition for the pressure by\n",
     "    # selecting a central baryon density\n",
@@ -159,8 +170,10 @@
     "    # Solve the TOV equations given our EOS and central density\n",
     "    import time\n",
     "    start = time.time()\n",
-    "    TOV.TOV_Solver(eos,outfile=\"outputTOVpolytrope.txt\",rho_baryon_central=rhob_central,verbose=True)\n",
-    "    print(\"TOV solution generated in: \"+str(time.time()-start)+\" s\")"
+    "    outfilename = \"outputTOVpolytrope-\"+EOSname+\".txt\"\n",
+    "    TOV.TOV_Solver(eos,outfile=outfilename,rho_baryon_central=rhob_central,verbose=True)\n",
+    "    print(\"PPEOS \"+EOSname+\" TOV solution generated in: \"+str(time.time()-start)+\" s\")\n",
+    "    print(\"Initial data file: \"+outfilename)"
    ]
   },
   {
@@ -947,27 +960,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 93697 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
@@ -993,7 +988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
