TOV_Solver; Tutorial-ETK_thorn-NRPyPlusTOVID: Output isotropic radius as well.

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -80,10 +80,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1211, 1211, 1211, 1211, 1211, 1211)\n",
-      "Just generated a TOV star with R_Schw = 2.721036062528257e-01 , M = 8.242702010994347e-02 , M/R_Schw = 3.029251293103268e-01 .\n",
-      "PPEOS SLy TOV solution generated in: 0.645609855652 s\n",
-      "Initial data file: outputTOVpolytrope-SLy.txt\n"
+      "(1210, 1210, 1210, 1210, 1210, 1210)\n",
+      "Just generated a TOV star with \n",
+      "* M        = 8.795916086122126e-02 ,\n",
+      "* R_Schw   = 2.662450073694224e-01 , \n",
+      "* R_iso    = 4.260796445609373e-01 , \n",
+      "* M/R_Schw = 3.303692404611947e-01 \n",
+      "\n",
+      "PPEOS APR4 TOV solution generated in: 5.60929989815 s\n",
+      "Initial data file: outputTOVpolytrope-APR4.txt\n"
      ]
     }
    ],
@@ -127,8 +132,8 @@
     "# .---------------------------------------------.\n",
     "# vvvvvvvvvvvvvvvv\n",
     "# EOSname = \"Single\"\n",
-    "# EOSname = \"APR4\"\n",
-    "EOSname = \"SLy\"\n",
+    "# EOSname = \"SLy\"\n",
+    "EOSname = \"APR4\"\n",
     "# ^^^^^^^^^^^^^^^^\n",
     "\n",
     "# Import our TOV solver, which supports both single\n",
@@ -906,9 +911,9 @@
     "  WRITES: admbase::gyy(Everywhere)\n",
     "  WRITES: admbase::gyz(Everywhere)\n",
     "  WRITES: admbase::gzz(Everywhere)\n",
-    "  WRITES: hydrobase::velx(Everywhere)\n",
-    "  WRITES: hydrobase::vely(Everywhere)\n",
-    "  WRITES: hydrobase::velz(Everywhere)\n",
+    "  WRITES: hydrobase::vel[0](Everywhere)\n",
+    "  WRITES: hydrobase::vel[1](Everywhere)\n",
+    "  WRITES: hydrobase::vel[2](Everywhere)\n",
     "  WRITES: hydrobase::rho(Everywhere)\n",
     "  WRITES: hydrobase::eps(Everywhere)\n",
     "  WRITES: hydrobase::press(Everywhere)\n",
@@ -960,9 +965,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\r\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
@@ -988,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
