--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -80,15 +80,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1210, 1210, 1210, 1210, 1210, 1210)\n",
+      "(1256, 1256, 1256, 1256, 1256, 1256)\n",
       "Just generated a TOV star with \n",
-      "* M        = 8.795916086122126e-02 ,\n",
-      "* R_Schw   = 2.662450073694224e-01 , \n",
-      "* R_iso    = 4.260796445609373e-01 , \n",
-      "* M/R_Schw = 3.303692404611947e-01 \n",
+      "* M        = 1.405031497682765e-01 ,\n",
+      "* R_Schw   = 9.566039886703138e-01 , \n",
+      "* R_iso    = 8.100079558158075e-01 , \n",
+      "* M/R_Schw = 1.468770268913230e-01 \n",
       "\n",
-      "PPEOS APR4 TOV solution generated in: 5.60929989815 s\n",
-      "Initial data file: outputTOVpolytrope-APR4.txt\n"
+      "Single Polytrope TOV solution generated in: 1.03009200096 s\n",
+      "Initial data file: outputTOVpolytrope.txt\n"
      ]
     }
    ],
@@ -131,9 +131,9 @@
     "# | TOV/Piecewise_Polytrope__dict.py NRPy+ file |\n",
     "# .---------------------------------------------.\n",
     "# vvvvvvvvvvvvvvvv\n",
-    "# EOSname = \"Single\"\n",
+    "EOSname = \"Single\"\n",
     "# EOSname = \"SLy\"\n",
-    "EOSname = \"APR4\"\n",
+    "# EOSname = \"APR4\"\n",
     "# ^^^^^^^^^^^^^^^^\n",
     "\n",
     "# Import our TOV solver, which supports both single\n",
@@ -973,7 +973,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 93134 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
+      "[NbConvertApp] Writing 94696 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
