--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
@@ -128,10 +128,31 @@
     "#include \"cctk_Parameters.h\"\n",
     "#include \"Symmetry.h\"\n",
     "#include \"IllinoisGRMHD_headers.h\"\n",
+    "#include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
     "\n",
     "extern \"C\" void IllinoisGRMHD_PostPostInitial_Set_Symmetries__Copy_Timelevels(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "  /**********************************\n",
+    "   * Piecewise Polytropic EOS Patch *\n",
+    "   *     Printing the EOS table     *\n",
+    "   **********************************/\n",
+    "  /*\n",
+    "   * The short piece of code below takes care\n",
+    "   * of initializing the EOS parameters.\n",
+    "   * Please refer to the \"inlined_functions.C\"\n",
+    "   * source file for the documentation on the\n",
+    "   * function.\n",
+    "   */\n",
+    "  eos_struct eos;\n",
+    "  initialize_EOS_struct_from_input(eos);\n",
+    "    \n",
+    "  /* For diagnostic and user convenience purposes, we print\n",
+    "   * out the EOS parameters (rho_ppoly_tab, K_ppoly_tab,\n",
+    "   * and Gamma_ppoly_tab) at t=0.\n",
+    "   */\n",
+    "  if(cctk_iteration==0 && (int)GetRefinementLevel(cctkGH)==0) { print_EOS_table(eos); }\n",
     "\n",
     "  if(Gamma_th<0)\n",
     "    CCTK_VError(VERR_DEF_PARAMS,\"ERROR.  Default Gamma_th (=-1) detected.  You must set Gamma_th to the appropriate value in your initial data thorn, or your .par file!\\n\");\n",
@@ -227,10 +248,32 @@
      "text": [
       "Validation test for postpostinitial__set_symmetries__copy_timelevels.C: FAILED!\n",
       "Diff:\n",
-      "18,19c18,19\n",
+      "12a13\n",
+      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
+      "18,19c19,40\n",
       "<   if(gamma_th<0)\n",
       "<     CCTK_VError(VERR_DEF_PARAMS,\"ERROR.  Default gamma_th (=-1) detected.  You must set gamma_th to the appropriate value in your initial data thorn, or your .par file!\\n\");\n",
       "---\n",
+      ">   /**********************************\n",
+      ">    * Piecewise Polytropic EOS Patch *\n",
+      ">    *     Printing the EOS table     *\n",
+      ">    **********************************/\n",
+      ">   /*\n",
+      ">    * The short piece of code below takes care\n",
+      ">    * of initializing the EOS parameters.\n",
+      ">    * Please refer to the \"inlined_functions.C\"\n",
+      ">    * source file for the documentation on the\n",
+      ">    * function.\n",
+      ">    */\n",
+      ">   eos_struct eos;\n",
+      ">   initialize_EOS_struct_from_input(eos);\n",
+      ">     \n",
+      ">   /* For diagnostic and user convenience purposes, we print\n",
+      ">    * out the EOS parameters (rho_ppoly_tab, K_ppoly_tab,\n",
+      ">    * and Gamma_ppoly_tab) at t=0.\n",
+      ">    */\n",
+      ">   if(cctk_iteration==0 && (int)GetRefinementLevel(cctkGH)==0) { print_EOS_table(eos); }\n",
+      "> \n",
       ">   if(Gamma_th<0)\n",
       ">     CCTK_VError(VERR_DEF_PARAMS,\"ERROR.  Default Gamma_th (=-1) detected.  You must set Gamma_th to the appropriate value in your initial data thorn, or your .par file!\\n\");\n"
      ]
