GiRaFFE/A2B: Rewriting unit test to run executable twice, once for each grid.

--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
@@ -323,11 +323,14 @@
    "outputs": [],
    "source": [
     "out_string += \"\"\"\n",
-    "main() {\n",
-    "    // For the first trial, we'll use this grid. It has one point and one ghost zone.\n",
-    "    const int Nxx[3] = {1,1,1};\n",
-    "    const int Nxx_plus_2NGHOSTS[3] = {3,3,3};\n",
-    "    \n",
+    "main(int argc, const char *argv[]) {\n",
+    "    // Let the first argument be the test we're doing. 1 = coarser grid, 0 = finer grid.\n",
+    "    int do_quadratic_test = atoi(argv[0]);\n",
+    "    // We'll use this grid. It has one point and one ghost zone.\n",
+    "    const int Nxx[3] = {atoi(argv[1]),atoi(argv[2]),atoi(argv[3])};\n",
+    "    int Nxx_plus_2NGHOSTS[3];\n",
+    "    for (int i=0;i<3;i++) Nxx_plus_2NGHOSTS[i] = Nxx[i]+2*NGHOSTS;\n",
+    "\n",
     "    const REAL xxmin[3] = {xmin,ymin,zmin};\n",
     "    const REAL xxmax[3] = {xmax,ymax,zmax};\n",
     "\n",
@@ -370,31 +373,33 @@
     "    t = (double)(rand()%20-10);\n",
     "    u = (double)(rand()%20-10);\n",
     "\n",
-    "    calculate_AD(Nxx_plus_2NGHOSTS,xx,evol_gfs);\n",
+    "    if(do_quadratic_test) {\n",
+    "        calculate_AD(Nxx_plus_2NGHOSTS,xx,evol_gfs);\n",
     "\n",
-    "    // We'll also calculate the exact solution for B^i\n",
-    "    calculate_exact_BU(Nxx_plus_2NGHOSTS,xx,auxevol_gfs);\n",
-    "    \n",
-    "    // And now for the numerical derivatives:\n",
-    "    driver_A_to_B(Nxx,Nxx_plus_2NGHOSTS,dxx,evol_gfs,auxevol_gfs);\n",
-    "    \n",
-    "    //Two variables for inside the loop:\n",
-    "    int ghost_zone_overlap;int indices[3];\n",
-    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
-    "        // Are we on an edge/vertex? This algorithm can probably be improved.\n",
-    "        ghost_zone_overlap = 0;\n",
-    "        indices[0] = i0;\n",
-    "        indices[1] = i1;\n",
-    "        indices[2] = i2;\n",
-    "        for(int dim=0;dim<3;dim++) {\n",
-    "            if(indices[dim]%(Nxx[dim]+NGHOSTS)<NGHOSTS) {\n",
-    "                ghost_zone_overlap++;\n",
+    "        // We'll also calculate the exact solution for B^i\n",
+    "        calculate_exact_BU(Nxx_plus_2NGHOSTS,xx,auxevol_gfs);\n",
+    "\n",
+    "        // And now for the numerical derivatives:\n",
+    "        driver_A_to_B(Nxx,Nxx_plus_2NGHOSTS,dxx,evol_gfs,auxevol_gfs);\n",
+    "\n",
+    "        //Two variables for inside the loop:\n",
+    "        int ghost_zone_overlap;int indices[3];\n",
+    "        for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
+    "            // Are we on an edge/vertex? This algorithm can probably be improved.\n",
+    "            ghost_zone_overlap = 0;\n",
+    "            indices[0] = i0;\n",
+    "            indices[1] = i1;\n",
+    "            indices[2] = i2;\n",
+    "            for(int dim=0;dim<3;dim++) {\n",
+    "                if(indices[dim]%(Nxx[dim]+NGHOSTS)<NGHOSTS) {\n",
+    "                    ghost_zone_overlap++;\n",
+    "                }\n",
     "            }\n",
-    "        }\n",
-    "        if (ghost_zone_overlap < 2) {\n",
-    "            // Don't print if we're on an edge or vertex\n",
-    "            printf(\"Analytic: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]);\n",
-    "            printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]);\n",
+    "            if (ghost_zone_overlap < 2) {\n",
+    "                // Don't print if we're on an edge or vertex\n",
+    "                printf(\"Analytic: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]);\n",
+    "                printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]);\n",
+    "            }\n",
     "        }\n",
     "    }\n",
     "    \n",
@@ -418,63 +423,14 @@
     "    // And now for the numerical derivatives:\n",
     "    driver_A_to_B(Nxx,Nxx_plus_2NGHOSTS,dxx,evol_gfs,auxevol_gfs);\n",
     "    \n",
-    "    // To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "    // We'll need new Nxx and Nxx_plus_2NGHOSTS terms; we'll use the suffix *_o2 to represent the halved grid spacing.\n",
-    "    const int Nxx_o2[3] = {3,3,3};\n",
-    "    const int Nxx_plus_2NGHOSTS_o2[3] = {5,5,5};\n",
-    "    // We set up these grids in a bit of an unusual way so that the points in the ghost zones line up for testing.\n",
-    "\n",
-    "    REAL dxx_o2[3];\n",
-    "    for(int i=0;i<3;i++) dxx_o2[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx_o2[i]+1.0);\n",
-    "    for(int i=0;i<3;i++) printf(\"dxx_o2[%d] = %.15e\\\\n\",i,dxx_o2[i]);\n",
-    "\n",
-    "    REAL *xx_o2[3];\n",
-    "    for(int i=0;i<3;i++) {\n",
-    "        xx_o2[i] = (REAL *)malloc(sizeof(REAL)*Nxx_plus_2NGHOSTS_o2[i]);\n",
-    "        for(int j=0;j<Nxx_plus_2NGHOSTS_o2[i];j++) {\n",
-    "            xx_o2[i][j] = xxmin[i] + ((REAL)(j))*dxx_o2[i]; // Face-centered grid.\n",
-    "        }\n",
-    "    }\n",
-    "    //for(int i=0;i<Nxx_plus_2NGHOSTS_o2[0];i++) printf(\"xx_o2[0][%d] = %.15e\\\\n\",i,xx_o2[0][i]);\n",
-    "\n",
-    "    // This is the array to which we'll write the NRPy+ variables.\n",
-    "    REAL *auxevol_o2_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS_o2[2] * Nxx_plus_2NGHOSTS_o2[1] * Nxx_plus_2NGHOSTS_o2[0]);\n",
-    "    REAL *evol_o2_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS_o2[2] * Nxx_plus_2NGHOSTS_o2[1] * Nxx_plus_2NGHOSTS_o2[0]);\n",
+    "    // Some variables needed for the loop:\n",
+    "    int ghost_zone_overlap; int indices[3];\n",
     "    \n",
-    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS_o2[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS_o2[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS_o2[0];i0++) {\n",
-    "        auxevol_o2_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0;\n",
-    "    }\n",
-    "    \n",
-    "    // Now, we'll calculate the fields on the refined grid.\n",
-    "    calculate_AD(Nxx_plus_2NGHOSTS_o2,xx_o2,evol_o2_gfs);\n",
-    "\n",
-    "    // We'll also calculate the exact solution for B^i\n",
-    "    calculate_exact_BU(Nxx_plus_2NGHOSTS_o2,xx_o2,auxevol_o2_gfs);\n",
-    "    \n",
-    "    // And now for the numerical derivatives:\n",
-    "    driver_A_to_B(Nxx_o2,Nxx_plus_2NGHOSTS_o2,dxx_o2,evol_o2_gfs,auxevol_o2_gfs);\n",
-    "    \n",
-    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS_o2[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS_o2[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS_o2[0];i0++) {\n",
-    "        // Are we on an edge/vertex? This algorithm can probably be improved.\n",
-    "        ghost_zone_overlap = 0;\n",
-    "        indices[0] = i0;\n",
-    "        indices[1] = i1;\n",
-    "        indices[2] = i2;\n",
-    "        for(int dim=0;dim<3;dim++) {\n",
-    "            if(indices[dim]%(Nxx_o2[dim]+NGHOSTS)<NGHOSTS) {\n",
-    "                ghost_zone_overlap++;\n",
-    "            }\n",
-    "        }\n",
-    "        if (ghost_zone_overlap < 2) {\n",
-    "            // Don't print if we're on an edge or vertex\n",
-    "            /*printf(\"i0,i1,i2 = %d,%d,%d\\\\n\",i0,i1,i2);\n",
-    "            printf(\"Analytic: %.16e, %.16e, %.16e\\\\n\",auxevol_o2_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]);\n",
-    "            printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_o2_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_o2_gfs[IDX4(BU2GF,i0,i1,i2)]);*/\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
+    "    printf(\"Writing output...\\\\n\");\n",
+    "    char filename[100];\n",
+    "    sprintf(filename,\"out%d-numer.txt\",Nxx[0]);\n",
+    "    FILE *out2D = fopen(filename, \"w\");\n",
     "    for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
-    "        // Are we on an edge/vertex? This algorithm can probably be improved.\n",
     "        ghost_zone_overlap = 0;\n",
     "        indices[0] = i0;\n",
     "        indices[1] = i1;\n",
@@ -485,15 +441,15 @@
     "            }\n",
     "        }\n",
     "        if (ghost_zone_overlap < 2) {\n",
-    "            // Don't print if we're on an edge or vertex \n",
-    "            /*printf(\"Convergence: %.16e, %.16e, %.16e\\\\n\",\n",
-    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU0GF,2*i0,2*i1,2*i2)])))/log(2),\n",
-    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU1GF,2*i0,2*i1,2*i2)])))/log(2),\n",
-    "                   log(fabs((auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)])/(auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_o2_gfs[IDX4(B_ANALYTICU2GF,2*i0,2*i1,2*i2)])))/log(2)\n",
-    "                   );*/\n",
+    "            // We print the difference between approximate and exact numbers.\n",
+    "            fprintf(out2D,\"%.16e, %.16e, %.16e\\\\n\",\n",
+    "                    auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],\n",
+    "                    auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],\n",
+    "                    auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]\n",
+    "                    );\n",
     "        }\n",
     "    }\n",
-    "\n",
+    "    fclose(out2D);\n",
     "}\n",
     "\"\"\"\n"
    ]
@@ -537,9 +493,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.C -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 1.22334718704 seconds.\n",
+      "Finished executing in 1.22357392311 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.23518800735 seconds.\n",
+      "Finished in 1.23767209053 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -547,31 +503,12 @@
       "dxx[0] = 1.000000000000000e-02\n",
       "dxx[1] = 1.000000000000000e-02\n",
       "dxx[2] = 1.000000000000000e-02\n",
-      "Analytic: 5.9999999999999998e-02, 8.0000000000000002e-02, 0.0000000000000000e+00\n",
-      "Numeric:  6.0000000000037801e-02, 7.9999999999991189e-02, 0.0000000000000000e+00\n",
-      "\n",
-      "Analytic: -4.0000000000000001e-02, 0.0000000000000000e+00, -1.4000000000000001e-01\n",
-      "Numeric:  -3.9999999999995595e-02, 0.0000000000000000e+00, -1.4000000000002899e-01\n",
-      "\n",
-      "Analytic: 0.0000000000000000e+00, -8.0000000000000002e-02, -1.0000000000000001e-01\n",
-      "Numeric:  0.0000000000000000e+00, -7.9999999999991189e-02, -9.9999999999944578e-02\n",
-      "\n",
-      "Analytic: 0.0000000000000000e+00, 0.0000000000000000e+00, 0.0000000000000000e+00\n",
-      "Numeric:  0.0000000000000000e+00, 0.0000000000000000e+00, 0.0000000000000000e+00\n",
-      "\n",
-      "Analytic: 0.0000000000000000e+00, 8.0000000000000002e-02, 1.0000000000000001e-01\n",
-      "Numeric:  0.0000000000000000e+00, 7.9999999999991189e-02, 9.9999999999944578e-02\n",
-      "\n",
-      "Analytic: 4.0000000000000001e-02, 0.0000000000000000e+00, 1.4000000000000001e-01\n",
-      "Numeric:  3.9999999999995595e-02, 0.0000000000000000e+00, 1.4000000000002899e-01\n",
-      "\n",
-      "Analytic: -5.9999999999999998e-02, -8.0000000000000002e-02, 0.0000000000000000e+00\n",
-      "Numeric:  -6.0000000000037801e-02, -7.9999999999991189e-02, 0.0000000000000000e+00\n",
-      "\n",
-      "dxx_o2[0] = 5.000000000000000e-03\n",
-      "dxx_o2[1] = 5.000000000000000e-03\n",
-      "dxx_o2[2] = 5.000000000000000e-03\n",
-      "Finished in 0.0341501235962 seconds.\n",
+      "Writing output...\n",
+      "dxx[0] = 5.000000000000000e-03\n",
+      "dxx[1] = 5.000000000000000e-03\n",
+      "dxx[2] = 5.000000000000000e-03\n",
+      "Writing output...\n",
+      "Finished in 0.0370719432831 seconds.\n",
       "\n",
       "\n"
      ]
@@ -590,7 +527,9 @@
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
     "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
-    "!./Validation/A2B_unit_test\n",
+    "!./Validation/A2B_unit_test 1 1 1\n",
+    "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
+    "!./Validation/A2B_unit_test 3 3 3\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
