--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "### RHO_STAR FLUX\n",
-    "def compute_rho_star_flux(vU, rho_star):\n",
+    "def compute_rho_star_fluxU(vU, rho_star):\n",
     "    global rho_star_fluxU\n",
     "    rho_star_fluxU = ixp.zerorank1(DIM=3)\n",
     "    for j in range(3):\n",
@@ -276,14 +276,13 @@
    "outputs": [],
    "source": [
     "### TAUTILDE FLUX\n",
-    "def compute_tau_tilde_flux(alpha, sqrtgammaDET, vU,T4UU):\n",
+    "def compute_tau_tilde_fluxU(alpha, sqrtgammaDET, vU,T4UU):\n",
     "    tau_tilde_fluxU = ixp.zerorank1(DIM=3)\n",
     "    for j in range(3):\n",
     "        tau_tilde_fluxU[j] = alpha**2*sqrtgammaDET*T4UU[0][j+1] - rho_star*vU[j]\n",
     "\n",
     "### STILDE FLUX\n",
-    "def compute_S_tilde_flux(gammaDD,betaU,alpha, sqrtgammaDET, T4UU):\n",
-    "\n",
+    "def compute_S_tilde_fluxUD(gammaDD,betaU,alpha, sqrtgammaDET, T4UU):\n",
     "    Stilde_fluxUD = ixp.zerorank2(DIM=3)\n",
     "    for j in range(3):\n",
     "        for i in range(3):\n",
@@ -511,9 +510,9 @@
     "compute_vU_from_u4U__no_speed_limit(u4U)\n",
     "\n",
     "# Next compute fluxes of conservative variables\n",
-    "compute_rho_star_flux(vU, rho_star)\n",
-    "compute_tau_tilde_flux(alpha,             sqrtgammaDET, vU,T4UU)\n",
-    "compute_S_tilde_flux(gammaDD,betaU,alpha, sqrtgammaDET,    T4UU)\n",
+    "compute_rho_star_fluxU(vU, rho_star)\n",
+    "compute_tau_tilde_fluxU(alpha,             sqrtgammaDET, vU,T4UU)\n",
+    "compute_S_tilde_fluxUD(gammaDD,betaU,alpha, sqrtgammaDET,    T4UU)\n",
     "\n",
     "# Then declare derivatives & compute g4DDdD\n",
     "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
@@ -557,9 +556,9 @@
     "Ge.compute_vU_from_u4U__no_speed_limit(u4U)\n",
     "\n",
     "# Next compute fluxes of conservative variables\n",
-    "Ge.compute_rho_star_flux(Ge.vU, Ge.rho_star)\n",
-    "Ge.compute_tau_tilde_flux(alpha,             Ge.sqrtgammaDET, Ge.vU,Ge.T4UU)\n",
-    "Ge.compute_S_tilde_flux(gammaDD,betaU,alpha, Ge.sqrtgammaDET,       Ge.T4UU)\n",
+    "Ge.compute_rho_star_fluxU (                                     Ge.vU,Ge.rho_star)\n",
+    "Ge.compute_tau_tilde_fluxU(alpha,              Ge.sqrtgammaDET, Ge.vU,Ge.T4UU)\n",
+    "Ge.compute_S_tilde_fluxUD (gammaDD,betaU,alpha,Ge.sqrtgammaDET,       Ge.T4UU)\n",
     "\n",
     "# Then declare derivatives & compute g4DDdD\n",
     "# gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
@@ -571,13 +570,6 @@
     "Ge.compute_s_source_term(KDD,betaU,alpha, Ge.sqrtgammaDET,alpha_dD, Ge.T4UU)\n",
     "Ge.compute_Stilde_source_termD(    alpha, Ge.sqrtgammaDET,Ge.g4DDdD,Ge.T4UU)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
