--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-A2B.ipynb
@@ -336,7 +336,6 @@
     "\n",
     "    REAL dxx[3];\n",
     "    for(int i=0;i<3;i++) dxx[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx[i]+1.0);\n",
-    "    for(int i=0;i<3;i++) printf(\"dxx[%d] = %.15e\\\\n\",i,dxx[i]);\n",
     "    \n",
     "    // We'll define our grid slightly different from how we normally would. We let our outermost\n",
     "    // ghostzones coincide with xxmin and xxmax instead of the interior of the grid. This means\n",
@@ -357,7 +356,8 @@
     "    REAL *evol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS[2] * Nxx_plus_2NGHOSTS[1] * Nxx_plus_2NGHOSTS[0]);\n",
     "    \n",
     "    for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
-    "        auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0;\n",
+    "        //auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0; // Flat Space\n",
+    "        auxevol_gfs[IDX4(GAMMADETGF,i0,i1,i2)] = 1.0 + 1.0/(1.0+xx[0][i0]+xx[1][i1]+xx[2][i2]);\n",
     "    }\n",
     "    \n",
     "    // We now want to set up the vector potential. First, we must set the coefficients. \n",
@@ -382,6 +382,9 @@
     "        // And now for the numerical derivatives:\n",
     "        driver_A_to_B(Nxx,Nxx_plus_2NGHOSTS,dxx,evol_gfs,auxevol_gfs);\n",
     "\n",
+    "        printf(\"This test uses quadratic vector potentials, so the magnetic fields should agree to roundoff error.\\\\n\");\n",
+    "        printf(\"Below, each row represents one point. Each column represents a component of the magnetic field.\\\\n\");\n",
+    "        printf(\"Shown is the number of Significant Digits of Agreement, at least 13 is good, higher is better:\\\\n\\\\n\");\n",
     "        //Two variables for inside the loop:\n",
     "        int ghost_zone_overlap;int indices[3];\n",
     "        for(int i2=0;i2<Nxx_plus_2NGHOSTS[2];i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS[1];i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS[0];i0++) {\n",
@@ -397,8 +400,11 @@
     "            }\n",
     "            if (ghost_zone_overlap < 2) {\n",
     "                // Don't print if we're on an edge or vertex\n",
-    "                printf(\"Analytic: %.16e, %.16e, %.16e\\\\n\",auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)],auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]);\n",
-    "                printf(\"Numeric:  %.16e, %.16e, %.16e\\\\n\\\\n\",auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]);\n",
+    "                printf(\"SDA: %.3f, %.3f, %.3f\\\\n\",\n",
+    "                       1.0-log10(2.0*fabs(auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)])/(fabs(auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)])+fabs(auxevol_gfs[IDX4(BU0GF,i0,i1,i2)])+1.e-15)),\n",
+    "                       1.0-log10(2.0*fabs(auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)])/(fabs(auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)])+fabs(auxevol_gfs[IDX4(BU1GF,i0,i1,i2)])+1.e-15)),\n",
+    "                       1.0-log10(2.0*fabs(auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)])/(fabs(auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)])+fabs(auxevol_gfs[IDX4(BU2GF,i0,i1,i2)])+1.e-15))\n",
+    "                       );\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -426,7 +432,6 @@
     "    // Some variables needed for the loop:\n",
     "    int ghost_zone_overlap; int indices[3];\n",
     "    \n",
-    "    printf(\"Writing output...\\\\n\");\n",
     "    char filename[100];\n",
     "    sprintf(filename,\"out%d-numer.txt\",Nxx[0]);\n",
     "    FILE *out2D = fopen(filename, \"w\");\n",
@@ -443,7 +448,7 @@
     "            }\n",
     "            if (ghost_zone_overlap < 2) {\n",
     "                // We print the difference between approximate and exact numbers.\n",
-    "                fprintf(out2D,\"%.16e, %.16e, %.16e\\\\n\",\n",
+    "                fprintf(out2D,\"%.16e\\t%.16e\\t%.16e\\\\n\",\n",
     "                        auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],\n",
     "                        auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],\n",
     "                        auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]\n",
@@ -462,13 +467,17 @@
     "                    ghost_zone_overlap++;\n",
     "                }\n",
     "            }\n",
+    "            // Don't print on the edges or corners\n",
     "            if (ghost_zone_overlap < 2) {\n",
-    "                // We print the difference between approximate and exact numbers.\n",
-    "                fprintf(out2D,\"%.16e, %.16e, %.16e\\\\n\",\n",
-    "                        auxevol_gfs[IDX4(B_ANALYTICU0GF,2*i0,2*i1,2*i2)]-auxevol_gfs[IDX4(BU0GF,2*i0,2*i1,2*i2)],\n",
-    "                        auxevol_gfs[IDX4(B_ANALYTICU1GF,2*i0,2*i1,2*i2)]-auxevol_gfs[IDX4(BU1GF,2*i0,2*i1,2*i2)],\n",
-    "                        auxevol_gfs[IDX4(B_ANALYTICU2GF,2*i0,2*i1,2*i2)]-auxevol_gfs[IDX4(BU2GF,2*i0,2*i1,2*i2)]\n",
-    "                        );\n",
+    "                // Only print points shared between the grids\n",
+    "                if (i0%2==0 && i1%2==0 && i2%2==0) {\n",
+    "                    // We print the difference between approximate and exact numbers.\n",
+    "                    fprintf(out2D,\"%.16e\\t%.16e\\t%.16e\\\\n\",\n",
+    "                            auxevol_gfs[IDX4(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU0GF,i0,i1,i2)],\n",
+    "                            auxevol_gfs[IDX4(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU1GF,i0,i1,i2)],\n",
+    "                            auxevol_gfs[IDX4(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4(BU2GF,i0,i1,i2)]\n",
+    "                            );\n",
+    "                }\n",
     "            }\n",
     "        }\n",
     "\n",
@@ -517,22 +526,25 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.C -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 1.22357392311 seconds.\n",
+      "Finished executing in 1.21833300591 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.23767209053 seconds.\n",
+      "Finished in 1.23079204559 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "dxx[0] = 1.000000000000000e-02\n",
-      "dxx[1] = 1.000000000000000e-02\n",
-      "dxx[2] = 1.000000000000000e-02\n",
-      "Writing output...\n",
-      "dxx[0] = 5.000000000000000e-03\n",
-      "dxx[1] = 5.000000000000000e-03\n",
-      "dxx[2] = 5.000000000000000e-03\n",
-      "Writing output...\n",
-      "Finished in 0.0370719432831 seconds.\n",
+      "This test uses quadratic vector potentials, so the magnetic fields should agree to roundoff error.\n",
+      "Below, each row represents one point. Each column represents a component of the magnetic field.\n",
+      "Shown is the number of Significant Digits of Agreement, at least 13 is good, higher is better:\n",
+      "\n",
+      "SDA: 13.201, 13.958, inf\n",
+      "SDA: 13.958, inf, 13.684\n",
+      "SDA: inf, 13.958, 13.256\n",
+      "SDA: inf, inf, inf\n",
+      "SDA: inf, 13.958, 13.256\n",
+      "SDA: 13.958, inf, 13.684\n",
+      "SDA: 13.201, 13.958, inf\n",
+      "Finished in 0.0307500362396 seconds.\n",
       "\n",
       "\n"
      ]
@@ -560,11 +572,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now that we have shown that when we use a quadratic vector potential, we get roundoff-level agreement (which is to be expected, since the finite-differencing used approximates the underlying function with a quadratic), we will use do a convergence test to show that when we can't exactly model the function, the truncation error dominates and converges to zero at the expected rate. For this, we use cubic functions for the vector potential. In the code above, we output the difference beteween the numeric and exact magnetic fields at the overlapping, non-edge, non-vertex points of two separate grids. Here, we import that data and calculate the convergence in the usual way, \n",
+    "$$\n",
+    "k = \\log_2 \\left( \\frac{F - F_1}{F - F_2} \\right),\n",
+    "$$\n",
+    "where $k$ is the convergence order, $F$ is the exact solution, $F_1$ is the approximate solution on the coarser grid with resolution $\\Delta x$, and $F_2$ is the approximate solution on the finer grid with resolution $\\Delta x/2$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convergence test: All should be approximately 2\n",
+      "\n",
+      "[[2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "Data1 = np.loadtxt(\"out1-numer.txt\")\n",
+    "Data2 = np.loadtxt(\"out3-numer.txt\")\n",
+    "\n",
+    "convergence = np.log(np.divide(np.abs(Data1),np.abs(Data2)))/np.log(2)\n",
+    "print(\"Convergence test: All should be approximately 2\\n\")\n",
+    "print(convergence)"
+   ]
   }
  ],
  "metadata": {
