--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -458,7 +458,7 @@
     "def u4U_in_terms_of_vU_apply_speed_limit(alpha,betaU,gammaDD, vU):\n",
     "    global u4_ito_3velsU\n",
     "    \n",
-    "    import GiRaFFE_HO.S_tilde_flux as GSf\n",
+    "    import GiRaFFE_HO.Stilde_flux as GSf\n",
     "    ValenciavU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        ValenciavU[i] = (vU[i] + betaU[i])/alpha\n",
@@ -638,21 +638,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
