--- a/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
@@ -171,58 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote to file \"NRPY+prim2Con.h\"\n",
-      "{\r\n",
-      "   const double tmp0 = 2*mi.gamDDxy;\r\n",
-      "   const double tmp1 = sqrt(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*pow(mi.gamDDyz, 2) - pow(mi.gamDDxy, 2)*mi.gamDDzz - pow(mi.gamDDxz, 2)*mi.gamDDyy + mi.gamDDxz*mi.gamDDyz*tmp0);\r\n",
-      "   const double tmp2 = pow(GAMMA_SPEED_LIMIT, -2);\r\n",
-      "   const double tmp3 = (1.0/2.0)*tmp2;\r\n",
-      "   const double tmp4 = pow(mi.alpha, 2);\r\n",
-      "   const double tmp5 = 1.0/tmp4;\r\n",
-      "   const double tmp6 = mi.betaX + vx;\r\n",
-      "   const double tmp7 = mi.gamDDxx*tmp5*pow(tmp6, 2);\r\n",
-      "   const double tmp8 = (1.0/2.0)*tmp7;\r\n",
-      "   const double tmp9 = mi.betaY + vy;\r\n",
-      "   const double tmp10 = mi.gamDDyy*tmp5*pow(tmp9, 2);\r\n",
-      "   const double tmp11 = (1.0/2.0)*tmp10;\r\n",
-      "   const double tmp12 = mi.betaZ + vz;\r\n",
-      "   const double tmp13 = mi.gamDDzz*pow(tmp12, 2)*tmp5;\r\n",
-      "   const double tmp14 = (1.0/2.0)*tmp13;\r\n",
-      "   const double tmp15 = tmp5*tmp6;\r\n",
-      "   const double tmp16 = tmp15*tmp9;\r\n",
-      "   const double tmp17 = mi.gamDDxy*tmp16;\r\n",
-      "   const double tmp18 = mi.gamDDxz*tmp12*tmp15;\r\n",
-      "   const double tmp19 = mi.gamDDyz*tmp12*tmp5*tmp9;\r\n",
-      "   const double tmp20 = tmp0*tmp16 + tmp10 + tmp13 + 2*tmp18 + 2*tmp19 + tmp7;\r\n",
-      "   const double tmp21 = (1.0/2.0)*fabs(tmp2 + tmp20 - 1);\r\n",
-      "   const double tmp22 = -tmp11 - tmp14 - tmp17 - tmp18 - tmp19 + tmp21 + tmp3 - tmp8 + 1.0/2.0;\r\n",
-      "   const double tmp23 = sqrt((tmp11 + tmp14 + tmp17 + tmp18 + tmp19 - tmp21 - tmp3 + tmp8 + 1.0/2.0)/tmp20);\r\n",
-      "   const double tmp24 = -mi.betaX + tmp23*tmp6;\r\n",
-      "   const double tmp25 = rho*tmp24;\r\n",
-      "   const double tmp26 = tmp1*tmp25/sqrt(tmp22);\r\n",
-      "   const double tmp27 = p*tmp5;\r\n",
-      "   const double tmp28 = mi.betaZ*mi.gamDDxz;\r\n",
-      "   const double tmp29 = tmp5*(ie + p/rho + 1)/tmp22;\r\n",
-      "   const double tmp30 = rho*pow(tmp24, 2)*tmp29 - tmp27;\r\n",
-      "   const double tmp31 = tmp25*tmp29;\r\n",
-      "   const double tmp32 = mi.betaX*tmp27 + tmp31*(-mi.betaY + tmp23*tmp9);\r\n",
-      "   const double tmp33 = mi.betaY*tmp27 + tmp31*(-mi.betaZ + tmp12*tmp23);\r\n",
-      "   const double tmp34 = mi.alpha*tmp1;\r\n",
-      "   const double tmp35 = mi.betaZ*mi.gamDDyz;\r\n",
-      "   const double tmp36 = mi.betaZ*mi.gamDDzz;\r\n",
-      "   con[iRhoStar] = tmp26;\r\n",
-      "   con[iSx] = tmp34*(mi.gamDDxx*tmp32 + mi.gamDDxy*tmp33 + tmp27*tmp28 + tmp30*(mi.betaX*mi.gamDDxx + mi.betaY*mi.gamDDxy + tmp28));\r\n",
-      "   con[iSy] = tmp34*(mi.gamDDxy*tmp32 + mi.gamDDyy*tmp33 + tmp27*tmp35 + tmp30*(mi.betaX*mi.gamDDxy + mi.betaY*mi.gamDDyy + tmp35));\r\n",
-      "   con[iSz] = tmp34*(mi.gamDDxz*tmp32 + mi.gamDDyz*tmp33 + tmp27*tmp36 + tmp30*(mi.betaX*mi.gamDDxz + mi.betaY*mi.gamDDyz + tmp36));\r\n",
-      "   con[iTau] = tmp1*tmp30*tmp4 - tmp26;\r\n",
-      "}\r\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'GiRaFFE_HO.S_tilde_flux'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ab337281db6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0mvU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msymbols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mGe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu4U_in_terms_of_vU_apply_speed_limit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbetaU\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0mu4U\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu4_ito_3velsU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jup/nrpytutorial/GRHD/equations.py\u001b[0m in \u001b[0;36mu4U_in_terms_of_vU_apply_speed_limit\u001b[0;34m(alpha, betaU, gammaDD, vU)\u001b[0m\n\u001b[1;32m    162\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mu4_ito_3velsU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m     \u001b[0;32mimport\u001b[0m \u001b[0mGiRaFFE_HO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_tilde_flux\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mGSf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m     \u001b[0mValenciavU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzerorank1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GiRaFFE_HO.S_tilde_flux'"
      ]
     }
    ],
@@ -328,21 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'GRHD.equations' has no attribute 'S_tilde_fluxUD'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-93b8d10d7aac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mGe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_S_tilde_fluxUD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammaDD\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbetaU\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrtgammaDET\u001b[0m\u001b[0;34m,\u001b[0m       \u001b[0mGe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT4UU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m outputC([Ge.rho_star_fluxU, Ge.S_tilde_fluxUD[0], Ge.S_tilde_fluxUD[1], Ge.S_tilde_fluxUD[2], Ge.tau_tilde_fluxU], \n\u001b[0m\u001b[1;32m      7\u001b[0m         [\"flux[iRhoStar]\", \"flux[iSx]\", \"flux[iSy]\", \"flux[iSz]\", \"flux[iTau]\"], filename=\"returnstring\")\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'GRHD.equations' has no attribute 'S_tilde_fluxUD'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Next compute fluxes of conservative variables\n",
@@ -853,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   },
   "nteract": {
    "version": "nteract-on-jupyter@1.9.7"
