--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -467,7 +467,7 @@
     "    u4_ito_3velsU = ixp.zerorank1(DIM=4)\n",
     "    u4_ito_3velsU[0] = GSf.rescaledu0\n",
     "    for i in range(3):\n",
-    "        u4_ito_3velsU[i] = GSf.rescaledu0 * (alpha * GSf.rescaledValenciavU[i] - betaU[i])"
+    "        u4_ito_3velsU[i+1] = GSf.rescaledu0 * (alpha * GSf.rescaledValenciavU[i] - betaU[i])"
    ]
   },
   {
@@ -519,9 +519,13 @@
     "alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
     "compute_g4DDdD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
     "\n",
-    "# Finally compute source terms on tau_tilde and S_tilde equations\n",
+    "# Then compute source terms on tau_tilde and S_tilde equations\n",
     "compute_s_source_term(KDD,betaU,alpha, sqrtgammaDET,alpha_dD, T4UU)\n",
-    "compute_S_tilde_source_termD(    alpha, sqrtgammaDET,g4DDdD,   T4UU)"
+    "compute_S_tilde_source_termD(    alpha, sqrtgammaDET,g4DDdD,   T4UU)\n",
+    "\n",
+    "# Finally compute the 4-velocities in terms of an input 3-velocity testvU\n",
+    "testvU = ixp.declarerank1(\"testvU\",DIM=3)\n",
+    "u4U_in_terms_of_vU_apply_speed_limit(alpha,betaU,gammaDD, testvU)"
    ]
   },
   {
@@ -567,7 +571,10 @@
     "\n",
     "# Finally compute source terms on tau_tilde and S_tilde equations\n",
     "Ge.compute_s_source_term(KDD,betaU,alpha, Ge.sqrtgammaDET,alpha_dD, Ge.T4UU)\n",
-    "Ge.compute_S_tilde_source_termD(    alpha, Ge.sqrtgammaDET,Ge.g4DDdD,Ge.T4UU)"
+    "Ge.compute_S_tilde_source_termD(    alpha, Ge.sqrtgammaDET,Ge.g4DDdD,Ge.T4UU)\n",
+    "\n",
+    "GetestvU = ixp.declarerank1(\"testvU\")\n",
+    "Ge.u4U_in_terms_of_vU_apply_speed_limit(alpha,betaU,gammaDD, GetestvU)"
    ]
   },
   {
@@ -607,6 +614,9 @@
     "exprcheck_list.extend([Ge.sqrtgammaDET,Ge.rho_star,Ge.tau_tilde,Ge.s_source_term])\n",
     "expr_list.extend([sqrtgammaDET,rho_star,tau_tilde,s_source_term])\n",
     "for mu in range(4):\n",
+    "    namecheck_list.extend([gfnm(\"u4_ito_3velsU\",mu)])\n",
+    "    exprcheck_list.extend([Ge.u4_ito_3velsU[mu]])\n",
+    "    expr_list.extend([u4_ito_3velsU[mu]])    \n",
     "    for nu in range(4):\n",
     "        namecheck_list.extend([gfnm(\"T4UU\",mu,nu),gfnm(\"T4UD\",mu,nu)])\n",
     "        exprcheck_list.extend([Ge.T4UU[mu][nu],Ge.T4UD[mu][nu]])\n",
